<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>icart_mini_driver</name>
  <version>0.0.0</version>
  <description>ROS 2 wrapper for ypspur </description>
  <maintainer email="yaruo0406@gmail.com">Haruyama Kenta</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend version_gte="1.20.0">ypspur</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
